[package]
name = "colony-rs"
version = "0.1.0"
edition = "2021"
description = "Colony Smart Contract bindings for Rust"
license = "GPL-3.0-only"

[dependencies]
ethers = "1"
once_cell = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "trust-dns", "trust-dns-resolver"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros"] }
url = "2"

[build-dependencies]
ethers = "1"
eyre = "0.6"
